--- a/webtech_beadando/NodeServer/student/manufacturerForm.html
+++ b/webtech_beadando/NodeServer/student/manufacturerForm.html
@@ -1,30 +1,4 @@
-<script>
-    function addManufacturer() {
-        $("#error").empty();
-        var name = $("#name").val();
-        var country = $("#country").val();
-        var founded = $("#founded").val();
-        if (name == '' || country == '' || founded == '') {
-            $('#error').append('You must fill every input!');
-        } else {
-            var manufacturer = {
-                name: name,
-                country: country,
-                founded: founded
-            }
-            $.post("addManufacturers", manufacturer)
-                .done(function(msg){  
-                        alert("Success")
-                        $("#content").load('manufacturers.html');
-                    })
-                .fail(function(xhr, status, error) {
-                    alert("Fail");
-                    $("#content").load('manufacturerForm.html');
-                });
-        }
-    }
-</script>
-
+<script src="./js/manufacturer.js" type="text/javascript"></script>
 <div class='main'>
     <div class='mainContent'>
         <div class='form'>
