--- a/webtech_beadando/NodeServer/student/index.html
+++ b/webtech_beadando/NodeServer/student/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./css/index.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="./js/jquery-3.4.1.js"></script>
         <script src="./js/index.js" type="text/javascript"></script>
     </head>
     <title>Cars</title>
